[package]
name = "gui_repo_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# iced = "0.7"

[dependencies]
iced = { version = "0.7", features = ["image", "debug", "tokio"] }
serde_json = "1.0"
webbrowser = "0.8.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.13"
default-features = false
features = ["json", "rustls-tls", "stream"]

# [dependencies.rand]
# version = "0.8.5"